feat: update yaml document and stub server
