# stub/swagger_server/models/__init__.py
@@ -6,5 +6,6 @@ from __future__ import absolute_import
 from swagger_server.models.efficiency import Efficiency
 from swagger_server.models.latest import Latest
 from swagger_server.models.log_item import LogItem
+from swagger_server.models.user_edit_body import UserEditBody
 from swagger_server.models.user_login_body import UserLoginBody
 from swagger_server.models.user_register_body import UserRegisterBody
