# stub/swagger_server/models/user_edit_body.py
@@ -1,0 +1,204 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class UserEditBody(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, username: str=None, password: str=None, age: int=None, gender: str=None, smoke: bool=None, exercise: int=None):  # noqa: E501
+        """UserEditBody - a model defined in Swagger
+
+        :param username: The username of this UserEditBody.  # noqa: E501
+        :type username: str
+        :param password: The password of this UserEditBody.  # noqa: E501
+        :type password: str
+        :param age: The age of this UserEditBody.  # noqa: E501
+        :type age: int
+        :param gender: The gender of this UserEditBody.  # noqa: E501
+        :type gender: str
+        :param smoke: The smoke of this UserEditBody.  # noqa: E501
+        :type smoke: bool
+        :param exercise: The exercise of this UserEditBody.  # noqa: E501
+        :type exercise: int
+        """
+        self.swagger_types = {
+            'username': str,
+            'password': str,
+            'age': int,
+            'gender': str,
+            'smoke': bool,
+            'exercise': int
+        }
+
+        self.attribute_map = {
+            'username': 'username',
+            'password': 'password',
+            'age': 'age',
+            'gender': 'gender',
+            'smoke': 'smoke',
+            'exercise': 'exercise'
+        }
+        self._username = username
+        self._password = password
+        self._age = age
+        self._gender = gender
+        self._smoke = smoke
+        self._exercise = exercise
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'UserEditBody':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The user_edit_body of this UserEditBody.  # noqa: E501
+        :rtype: UserEditBody
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def username(self) -> str:
+        """Gets the username of this UserEditBody.
+
+
+        :return: The username of this UserEditBody.
+        :rtype: str
+        """
+        return self._username
+
+    @username.setter
+    def username(self, username: str):
+        """Sets the username of this UserEditBody.
+
+
+        :param username: The username of this UserEditBody.
+        :type username: str
+        """
+        if username is None:
+            raise ValueError("Invalid value for `username`, must not be `None`")  # noqa: E501
+
+        self._username = username
+
+    @property
+    def password(self) -> str:
+        """Gets the password of this UserEditBody.
+
+
+        :return: The password of this UserEditBody.
+        :rtype: str
+        """
+        return self._password
+
+    @password.setter
+    def password(self, password: str):
+        """Sets the password of this UserEditBody.
+
+
+        :param password: The password of this UserEditBody.
+        :type password: str
+        """
+        if password is None:
+            raise ValueError("Invalid value for `password`, must not be `None`")  # noqa: E501
+
+        self._password = password
+
+    @property
+    def age(self) -> int:
+        """Gets the age of this UserEditBody.
+
+
+        :return: The age of this UserEditBody.
+        :rtype: int
+        """
+        return self._age
+
+    @age.setter
+    def age(self, age: int):
+        """Sets the age of this UserEditBody.
+
+
+        :param age: The age of this UserEditBody.
+        :type age: int
+        """
+        if age is None:
+            raise ValueError("Invalid value for `age`, must not be `None`")  # noqa: E501
+
+        self._age = age
+
+    @property
+    def gender(self) -> str:
+        """Gets the gender of this UserEditBody.
+
+
+        :return: The gender of this UserEditBody.
+        :rtype: str
+        """
+        return self._gender
+
+    @gender.setter
+    def gender(self, gender: str):
+        """Sets the gender of this UserEditBody.
+
+
+        :param gender: The gender of this UserEditBody.
+        :type gender: str
+        """
+        if gender is None:
+            raise ValueError("Invalid value for `gender`, must not be `None`")  # noqa: E501
+
+        self._gender = gender
+
+    @property
+    def smoke(self) -> bool:
+        """Gets the smoke of this UserEditBody.
+
+
+        :return: The smoke of this UserEditBody.
+        :rtype: bool
+        """
+        return self._smoke
+
+    @smoke.setter
+    def smoke(self, smoke: bool):
+        """Sets the smoke of this UserEditBody.
+
+
+        :param smoke: The smoke of this UserEditBody.
+        :type smoke: bool
+        """
+        if smoke is None:
+            raise ValueError("Invalid value for `smoke`, must not be `None`")  # noqa: E501
+
+        self._smoke = smoke
+
+    @property
+    def exercise(self) -> int:
+        """Gets the exercise of this UserEditBody.
+
+
+        :return: The exercise of this UserEditBody.
+        :rtype: int
+        """
+        return self._exercise
+
+    @exercise.setter
+    def exercise(self, exercise: int):
+        """Sets the exercise of this UserEditBody.
+
+
+        :param exercise: The exercise of this UserEditBody.
+        :type exercise: int
+        """
+        if exercise is None:
+            raise ValueError("Invalid value for `exercise`, must not be `None`")  # noqa: E501
+
+        self._exercise = exercise
